<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        app:navigationIconTint="@color/daynight_black_white"
        app:title="@string/title_blur_face" />

    <FrameLayout
        android:id="@+id/container_imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/container_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            android:scaleType="fitCenter" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_no_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent_gray_700"
            android:padding="@dimen/text_margin"
            android:text="@string/no_face_detected"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_body_text"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/container_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/text_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:id="@+id/container_blur_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_blur_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedButton="@+id/button_shape_ellipse"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_shape_ellipse"
                    style="?attr/materialIconButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/blur_shape_ellipse"
                    app:icon="@drawable/ic_blur_shape_circle"
                    app:iconGravity="textStart"
                    app:iconTint="@color/btn_blur_shape_icon" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_shape_square"
                    style="?attr/materialIconButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/blur_shape_square"
                    app:icon="@drawable/ic_blur_shape_square"
                    app:iconGravity="textStart"
                    app:iconTint="@color/btn_blur_shape_icon" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_blur_strength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_weight="1"
                android:contentDescription="@string/blur_strength"
                android:stepSize="1"
                android:value="3"
                android:valueFrom="1"
                android:valueTo="5"
                app:labelBehavior="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_blur_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blur_all" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:text="@string/clear_all" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/button_prev_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back"
                app:srcCompat="@drawable/ic_arrow_back_white"
                app:tint="@color/daynight_black_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_image_pager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_margin"
                android:textSize="@dimen/medium_body_text" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/button_next_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/next"
                app:srcCompat="@drawable/ic_arrow_forward_white"
                app:tint="@color/daynight_black_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_weight="1"
                android:text="@string/share" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
